任意のメッセージ

--- a/20230930_ogawa/20230930_ogawa.html
+++ b/20230930_ogawa/20230930_ogawa.html
@@ -9,7 +9,7 @@
 <body>
   <div class="flex">  
     <div class="header">
-        <h1 class="title">COACHTECH</h1>
+        <div class="title">COACHTECH</div>
         <nav>
             <div class="home">
                 <a href="#" class="home">ホーム</a>
@@ -31,7 +31,7 @@
             <div class="main_left_line"></div>
         </div>
         <div class="image">
-            <img src="img/firstview.jpeg" alt="firstview" width="600" height="450">
+            <img src="img/firstview.jpeg" alt="firstview" width="600" height="400">
         </div>
     </div>
   </div>
